cooddy/tests/suite/analyzerToolTest/parseErrors/foo.cpp
#include <foo.h>

extern "C" int foo()
{
    return 0;
}
